# gitlab-reviewer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  config.yml  config.yml.bak  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: reviews.db
docs/: BACKLOG.md  CODE_REVIEW.md  TEST_REPORT.md
helm/gitlab-reviewer/: Chart.yaml  values.yaml
helm/gitlab-reviewer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
prompts/custom/: example_team.md
prompts/system/: base.md  code_review.md  inline_format.md  lang_go.md  lang_python.md  lang_rust.md  lang_typescript.md  performance.md  security.md  style.md  summary.md
src/: __init__.py  config.py  context_builder.py  db.py  gitlab_client.py  llm_client.py  log_buffer.py  main.py  memory_store.py  metrics.py  notifier.py  pipeline.py  prompt_engine.py  queue_manager.py  reviewer.py  rules.py  slash_commands.py  webhook.py
src/api/: __init__.py  config.py  gitlab_api.py  health.py  logs_api.py  memory_api.py  metrics_api.py  notifications_api.py  providers.py  queue_api.py  reviews.py  rules_api.py  targets.py
src/backends/: __init__.py  dedup.py  kafka_backend.py  valkey_backend.py
src/prompts/system/: inline_format.md
src/ui/: router.py
src/ui/static/: index.html
src/utils/: retry.py
tests/: conftest.py  test_config.py  test_context_builder.py  test_cooldown.py  test_db.py  test_file_filters.py  test_filters.py  test_gitlab_client.py  test_inline_comments.py  test_llm_client.py  test_memory_store.py  test_notifier.py  test_pipeline.py  test_prompt_engine.py  test_queue_manager.py  test_reviewer.py  test_rules.py  test_slash_commands.py  test_webhook.py
tests/test_api/: test_config_api.py  test_health_metrics.py  test_memory_api.py  test_notifications_api.py  test_providers_api.py  test_queue_api.py  test_reviews_api.py  test_reviews_retry.py  test_targets_api.py
tests/test_backends/: test_dedup.py  test_kafka_backend.py  test_valkey_backend.py
tests/test_utils/: test_retry.py
