[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlab-reviewer"
version = "1.0.0"
description = "Automated GitLab MR review using local LLMs via ollama"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "aiosqlite>=0.20",
    "prometheus-client>=0.20",
    "tenacity>=8.2",
]

[project.optional-dependencies]
valkey = [
    "redis>=4.2",           # redis.asyncio — Valkey (Redis-compatible) backend
]
kafka = [
    "aiokafka>=0.10",       # async Kafka client
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",          # mock httpx calls
    "httpx>=0.27",          # AsyncClient for API tests (already in deps)
    "pytest-cov>=5.0",      # coverage reports
    "fakeredis>=2.20",      # in-process Redis for Valkey backend tests
    "redis>=4.2",           # required by fakeredis
    "aiokafka>=0.10",       # Kafka backend tests (mocked)
]

[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[project.scripts]
gitlab-reviewer = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
